tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_square_quad4d2_large.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
        ],
        [
            0.0,
            0.5,
        ],
        [
            0.0625000000000001,
            0.0,
        ],
        [
            0.1250000000000001,
            0.0,
        ],
        [
            0.1875000000000001,
            0.0,
        ],
        [
            0.2500000000000001,
            0.0,
        ],
        [
            0.3125000000000001,
            0.0,
        ],
        [
            0.3750000000000001,
            0.0,
        ],
        [
            0.4375,
            0.0,
        ],
        [
            0.5,
            0.0625000000000001,
        ],
        [
            0.5,
            0.1250000000000001,
        ],
        [
            0.5,
            0.1875000000000001,
        ],
        [
            0.5,
            0.2500000000000001,
        ],
        [
            0.5,
            0.3125000000000001,
        ],
        [
            0.5,
            0.3750000000000001,
        ],
        [
            0.5,
            0.4375,
        ],
        [
            0.4374999999999999,
            0.5,
        ],
        [
            0.3749999999999999,
            0.5,
        ],
        [
            0.3124999999999999,
            0.5,
        ],
        [
            0.2499999999999999,
            0.5,
        ],
        [
            0.1874999999999999,
            0.5,
        ],
        [
            0.1249999999999999,
            0.5,
        ],
        [
            0.0625,
            0.5,
        ],
        [
            0.0,
            0.4374999999999999,
        ],
        [
            0.0,
            0.3749999999999999,
        ],
        [
            0.0,
            0.3124999999999999,
        ],
        [
            0.0,
            0.2499999999999999,
        ],
        [
            0.0,
            0.1874999999999999,
        ],
        [
            0.0,
            0.1249999999999999,
        ],
        [
            0.0,
            0.0625,
        ],
        [
            0.05822998290347076,
            0.2605649934272224,
        ],
        [
            0.2690625499678753,
            0.4373741634969621,
        ],
        [
            0.4394063223897706,
            0.2532266282495676,
        ],
        [
            0.218731571670798,
            0.05413444603683523,
        ],
        [
            0.4485296952607269,
            0.3514543919622855,
        ],
        [
            0.1562572613976605,
            0.4430017882804914,
        ],
        [
            0.3139361519575364,
            0.05655977493085765,
        ],
        [
            0.06317620356498166,
            0.143322085838519,
        ],
        [
            0.09487783772320771,
            0.05177176608767001,
        ],
        [
            0.4346802809668467,
            0.1254847795829751,
        ],
        [
            0.385835561124088,
            0.4424107541217095,
        ],
        [
            0.05642710595914754,
            0.3800935995942247,
        ],
        [
            0.2206910771762775,
            0.4223319654557284,
        ],
        [
            0.2409669046111134,
            0.3803342651533306,
        ],
        [
            0.2796523091247737,
            0.3809670135891468,
        ],
        [
            0.2811532273431561,
            0.3278775056845646,
        ],
        [
            0.2226036411773187,
            0.3311968358436785,
        ],
        [
            0.2383195344809018,
            0.2774912466426128,
        ],
        [
            0.2785950269114238,
            0.275688209913682,
        ],
        [
            0.2811213160111221,
            0.22424678930415,
        ],
        [
            0.2051718789543341,
            0.2190264006807288,
        ],
        [
            0.2437323515129852,
            0.1510889946253526,
        ],
        [
            0.2955104382677184,
            0.1705633178693746,
        ],
        [
            0.170775327327602,
            0.1496636539918524,
        ],
        [
            0.1214950554939795,
            0.1549693083706915,
        ],
        [
            0.1571075604841364,
            0.1175566591042925,
        ],
        [
            0.3096864964698186,
            0.1137240137759864,
        ],
        [
            0.3600135006231731,
            0.1960897704484206,
        ],
        [
            0.1223462154153212,
            0.2116835515605153,
        ],
        [
            0.1160915762585152,
            0.2719530266180434,
        ],
        [
            0.1103153596848872,
            0.3288204042469799,
        ],
        [
            0.1503778448299227,
            0.3343952793879381,
        ],
        [
            0.1108085553193199,
            0.3847477195247274,
        ],
        [
            0.1722344345729996,
            0.388665431896197,
        ],
        [
            0.4451386678415112,
            0.3111850878656598,
        ],
        [
            0.3810973352747714,
            0.2611286164327285,
        ],
        [
            0.4349323164015576,
            0.1902737625983149,
        ],
        [
            0.2602460266589819,
            0.05295883471215043,
        ],
        [
            0.169321158311335,
            0.2933206700284435,
        ],
        [
            0.3901133716683218,
            0.3173464068481684,
        ],
        [
            0.4042022912715102,
            0.3789676816396894,
        ],
        [
            0.1591573024428046,
            0.04559816201766287,
        ],
        [
            0.3260818403833355,
            0.4401545419132589,
        ],
        [
            0.2067505282756192,
            0.1228710534088913,
        ],
        [
            0.3737227477880348,
            0.06011343705045663,
        ],
        [
            0.4477468983095898,
            0.402878525370986,
        ],
        [
            0.07366106010639908,
            0.09356062491854583,
        ],
        [
            0.1150073732639813,
            0.4420073499310098,
        ],
        [
            0.3344198772063799,
            0.3243065221373092,
        ],
        [
            0.3216841712974912,
            0.2322442333286768,
        ],
        [
            0.1243251727668242,
            0.1096855974361544,
        ],
        [
            0.3697587371967951,
            0.1225195262768584,
        ],
        [
            0.06043027625340477,
            0.2006739036270033,
        ],
        [
            0.05640733571939122,
            0.3204727192992418,
        ],
        [
            0.05704756158401425,
            0.03578978132756394,
        ],
        [
            0.4363834543890258,
            0.0619771294693556,
        ],
        [
            0.4434497320434642,
            0.443296169676297,
        ],
        [
            0.05864054073426955,
            0.4399127167621574,
        ],
        [
            0.3286863771347082,
            0.2710301016990295,
        ],
        [
            0.2280270786306877,
            0.09529701131120621,
        ],
        [
            0.1773829335529767,
            0.09451185524609806,
        ],
        [
            0.2598706027949543,
            0.1025253630660608,
        ],
        [
            0.1405036776174168,
            0.07236710706135094,
        ],
        [
            0.3345858245375794,
            0.3811534603906345,
        ],
    ],
    connectivity: [
        Quad4d2Connectivity(
            [
                67,
                59,
                68,
                34,
            ],
        ),
        Quad4d2Connectivity(
            [
                76,
                83,
                58,
                38,
            ],
        ),
        Quad4d2Connectivity(
            [
                56,
                60,
                84,
                39,
            ],
        ),
        Quad4d2Connectivity(
            [
                64,
                43,
                85,
                62,
            ],
        ),
        Quad4d2Connectivity(
            [
                13,
                68,
                41,
                12,
            ],
        ),
        Quad4d2Connectivity(
            [
                70,
                48,
                65,
                63,
            ],
        ),
        Quad4d2Connectivity(
            [
                70,
                63,
                62,
                61,
            ],
        ),
        Quad4d2Connectivity(
            [
                78,
                40,
                94,
                82,
            ],
        ),
        Quad4d2Connectivity(
            [
                65,
                64,
                62,
                63,
            ],
        ),
        Quad4d2Connectivity(
            [
                65,
                37,
                79,
                64,
            ],
        ),
        Quad4d2Connectivity(
            [
                44,
                45,
                46,
                33,
            ],
        ),
        Quad4d2Connectivity(
            [
                34,
                14,
                15,
                66,
            ],
        ),
        Quad4d2Connectivity(
            [
                71,
                67,
                34,
                66,
            ],
        ),
        Quad4d2Connectivity(
            [
                72,
                71,
                66,
                36,
            ],
        ),
        Quad4d2Connectivity(
            [
                16,
                36,
                66,
                15,
            ],
        ),
        Quad4d2Connectivity(
            [
                48,
                47,
                46,
                45,
            ],
        ),
        Quad4d2Connectivity(
            [
                44,
                65,
                48,
                45,
            ],
        ),
        Quad4d2Connectivity(
            [
                35,
                73,
                5,
                6,
            ],
        ),
        Quad4d2Connectivity(
            [
                7,
                8,
                38,
                69,
            ],
        ),
        Quad4d2Connectivity(
            [
                68,
                13,
                14,
                34,
            ],
        ),
        Quad4d2Connectivity(
            [
                65,
                44,
                22,
                37,
            ],
        ),
        Quad4d2Connectivity(
            [
                52,
                70,
                61,
                60,
            ],
        ),
        Quad4d2Connectivity(
            [
                42,
                19,
                20,
                74,
            ],
        ),
        Quad4d2Connectivity(
            [
                33,
                21,
                22,
                44,
            ],
        ),
        Quad4d2Connectivity(
            [
                69,
                35,
                6,
                7,
            ],
        ),
        Quad4d2Connectivity(
            [
                48,
                70,
                52,
                49,
            ],
        ),
        Quad4d2Connectivity(
            [
                52,
                53,
                54,
                51,
            ],
        ),
        Quad4d2Connectivity(
            [
                52,
                60,
                56,
                55,
            ],
        ),
        Quad4d2Connectivity(
            [
                48,
                49,
                50,
                47,
            ],
        ),
        Quad4d2Connectivity(
            [
                52,
                51,
                50,
                49,
            ],
        ),
        Quad4d2Connectivity(
            [
                74,
                20,
                21,
                33,
            ],
        ),
        Quad4d2Connectivity(
            [
                52,
                55,
                75,
                53,
            ],
        ),
        Quad4d2Connectivity(
            [
                61,
                32,
                84,
                60,
            ],
        ),
        Quad4d2Connectivity(
            [
                22,
                23,
                79,
                37,
            ],
        ),
        Quad4d2Connectivity(
            [
                61,
                62,
                85,
                32,
            ],
        ),
        Quad4d2Connectivity(
            [
                72,
                36,
                16,
                77,
            ],
        ),
        Quad4d2Connectivity(
            [
                8,
                9,
                76,
                38,
            ],
        ),
        Quad4d2Connectivity(
            [
                31,
                78,
                39,
                30,
            ],
        ),
        Quad4d2Connectivity(
            [
                30,
                39,
                84,
                29,
            ],
        ),
        Quad4d2Connectivity(
            [
                28,
                32,
                85,
                27,
            ],
        ),
        Quad4d2Connectivity(
            [
                54,
                58,
                83,
                59,
            ],
        ),
        Quad4d2Connectivity(
            [
                17,
                2,
                18,
                88,
            ],
        ),
        Quad4d2Connectivity(
            [
                25,
                89,
                24,
                3,
            ],
        ),
        Quad4d2Connectivity(
            [
                4,
                86,
                31,
                0,
            ],
        ),
        Quad4d2Connectivity(
            [
                11,
                87,
                10,
                1,
            ],
        ),
        Quad4d2Connectivity(
            [
                72,
                42,
                74,
                95,
            ],
        ),
        Quad4d2Connectivity(
            [
                59,
                81,
                51,
                54,
            ],
        ),
        Quad4d2Connectivity(
            [
                71,
                72,
                95,
                80,
            ],
        ),
        Quad4d2Connectivity(
            [
                55,
                56,
                82,
                57,
            ],
        ),
        Quad4d2Connectivity(
            [
                47,
                50,
                90,
                80,
            ],
        ),
        Quad4d2Connectivity(
            [
                47,
                80,
                95,
                46,
            ],
        ),
        Quad4d2Connectivity(
            [
                59,
                83,
                41,
                68,
            ],
        ),
        Quad4d2Connectivity(
            [
                56,
                39,
                78,
                82,
            ],
        ),
        Quad4d2Connectivity(
            [
                51,
                81,
                90,
                50,
            ],
        ),
        Quad4d2Connectivity(
            [
                32,
                28,
                29,
                84,
            ],
        ),
        Quad4d2Connectivity(
            [
                16,
                17,
                88,
                77,
            ],
        ),
        Quad4d2Connectivity(
            [
                9,
                10,
                87,
                76,
            ],
        ),
        Quad4d2Connectivity(
            [
                43,
                26,
                27,
                85,
            ],
        ),
        Quad4d2Connectivity(
            [
                19,
                42,
                88,
                18,
            ],
        ),
        Quad4d2Connectivity(
            [
                26,
                43,
                89,
                25,
            ],
        ),
        Quad4d2Connectivity(
            [
                12,
                41,
                87,
                11,
            ],
        ),
        Quad4d2Connectivity(
            [
                5,
                40,
                86,
                4,
            ],
        ),
        Quad4d2Connectivity(
            [
                59,
                67,
                90,
                81,
            ],
        ),
        Quad4d2Connectivity(
            [
                23,
                24,
                89,
                79,
            ],
        ),
        Quad4d2Connectivity(
            [
                93,
                91,
                35,
                69,
            ],
        ),
        Quad4d2Connectivity(
            [
                58,
                93,
                69,
                38,
            ],
        ),
        Quad4d2Connectivity(
            [
                80,
                90,
                67,
                71,
            ],
        ),
        Quad4d2Connectivity(
            [
                75,
                92,
                35,
                91,
            ],
        ),
        Quad4d2Connectivity(
            [
                93,
                53,
                75,
                91,
            ],
        ),
        Quad4d2Connectivity(
            [
                54,
                53,
                93,
                58,
            ],
        ),
        Quad4d2Connectivity(
            [
                55,
                57,
                92,
                75,
            ],
        ),
        Quad4d2Connectivity(
            [
                35,
                92,
                94,
                73,
            ],
        ),
        Quad4d2Connectivity(
            [
                5,
                73,
                94,
                40,
            ],
        ),
        Quad4d2Connectivity(
            [
                33,
                46,
                95,
                74,
            ],
        ),
        Quad4d2Connectivity(
            [
                83,
                76,
                87,
                41,
            ],
        ),
        Quad4d2Connectivity(
            [
                31,
                86,
                40,
                78,
            ],
        ),
        Quad4d2Connectivity(
            [
                72,
                77,
                88,
                42,
            ],
        ),
        Quad4d2Connectivity(
            [
                64,
                79,
                89,
                43,
            ],
        ),
        Quad4d2Connectivity(
            [
                92,
                57,
                82,
                94,
            ],
        ),
    ],
}
