tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_square_quad9d2.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
        ],
        [
            0.0,
            0.5,
        ],
        [
            0.25,
            0.0,
        ],
        [
            0.125,
            0.0,
        ],
        [
            0.375,
            0.0,
        ],
        [
            0.5,
            0.25,
        ],
        [
            0.5,
            0.125,
        ],
        [
            0.5,
            0.375,
        ],
        [
            0.25,
            0.5,
        ],
        [
            0.375,
            0.5,
        ],
        [
            0.125,
            0.5,
        ],
        [
            0.0,
            0.25,
        ],
        [
            0.0,
            0.375,
        ],
        [
            0.0,
            0.125,
        ],
        [
            0.25,
            0.25,
        ],
        [
            0.25,
            0.125,
        ],
        [
            0.125,
            0.25,
        ],
        [
            0.125,
            0.125,
        ],
        [
            0.375,
            0.25,
        ],
        [
            0.375,
            0.125,
        ],
        [
            0.25,
            0.375,
        ],
        [
            0.375,
            0.375,
        ],
        [
            0.125,
            0.375,
        ],
    ],
    connectivity: [
        Quad9d2Connectivity(
            [
                0,
                4,
                16,
                13,
                5,
                17,
                18,
                15,
                19,
            ],
        ),
        Quad9d2Connectivity(
            [
                4,
                1,
                7,
                16,
                6,
                8,
                20,
                17,
                21,
            ],
        ),
        Quad9d2Connectivity(
            [
                16,
                7,
                2,
                10,
                20,
                9,
                11,
                22,
                23,
            ],
        ),
        Quad9d2Connectivity(
            [
                13,
                16,
                10,
                3,
                18,
                22,
                12,
                14,
                24,
            ],
        ),
    ],
}
