tests/unit_tests/io/snapshots/unit__unit_tests__io__msh__load_msh_square_tri6d2.snap
---
source: tests/unit_tests/io/msh.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
        ],
        [
            0.0,
            0.5,
        ],
        [
            0.25,
            0.0,
        ],
        [
            0.5,
            0.25,
        ],
        [
            0.25,
            0.5,
        ],
        [
            0.0,
            0.25,
        ],
        [
            0.25,
            0.25,
        ],
        [
            0.375,
            0.125,
        ],
        [
            0.125,
            0.125,
        ],
        [
            0.125,
            0.375,
        ],
        [
            0.375,
            0.375,
        ],
    ],
    connectivity: [
        Tri6d2Connectivity(
            [
                1,
                8,
                0,
                9,
                10,
                4,
            ],
        ),
        Tri6d2Connectivity(
            [
                0,
                8,
                3,
                10,
                11,
                7,
            ],
        ),
        Tri6d2Connectivity(
            [
                2,
                8,
                1,
                12,
                9,
                5,
            ],
        ),
        Tri6d2Connectivity(
            [
                3,
                8,
                2,
                11,
                12,
                6,
            ],
        ),
    ],
}
